package suna;

public enum Coefficients {




}
