package suna;

public class Species {
}
